# libdisarm

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  bootstrap  configure.ac  libdisarm.pc.in
src/dacli/: dacli.c
src/libdisarm/: args.c  args.h  print.c  print.h
